# sudokurapid

./: ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  sudokuRapid.cc  sudokuRapid.h  sudokuRapidCommon.h  sudokurapid.spec
examples/: board1.txt  board2.txt  board3.txt  board4.txt
sudokuRapidConsole/: Makefile.am  configure.ac  getStat.sh  main.cc
sudokuRapidQt/: main.cc  sudokuCell.cc  sudokuCell.h  sudokuForm.cc  sudokuForm.h  sudokuForm.ui  sudokuRapidQt.desktop  sudokuRapidQt.pro  sudokuScene.cc  sudokuScene.h
sudokuRapidQt/xdg/: Makefile.am  configure.ac
